Test writed for Parols, added json support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,8 @@
 name = "parol"
 version = "0.1.0"
 authors = ["Ogromny <ogromny@openmailbox.org>"]
+
+[dependencies]
+serde = "*"
+serde_derive = "*"
+serde_json = "*"
