--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "parol"
-version = "0.1.0"
+name = "parolrs"
+version = "0.1.1"
 authors = ["Ogromny <ogromny@openmailbox.org>"]
+
+[[bin]]
+name = "main"
+doc = false
 
 [dependencies]
 serde = "*"
 serde_derive = "*"
 serde_json = "*"
+sodiumoxide = "*"
